--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Neuro ID POC</string>
+    <string name="nid_app_demo_session_id">Session ID:</string>
     <string name="nid_app_demo_subtitle_welcome">Welcome!! You\'re one step away from checking your loan options. $</string>
     <string name="nid_app_demo_subtitle_description">Checking your loan options does not affect your credit score.</string>
     <string name="nid_app_demo_first_name">First Name</string>
